--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,46 @@
 {% extends 'website/user.html' %}
 {% block title %}Home{% endblock %}
 {% block body %}
-    
+    <div id="user-home">
+        <h1>Inventory Entry: </h1>
+        <form method="post" name="inventory" id="inventory">
+            <select class="form-select" size="3" aria-label="size 3 select example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+
+            <select class="form-select" size="3" aria-label="size 3 select example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+
+            <select class="form-select" size="3" aria-label="size 3 select example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+
+            <input type="submit" value="submit">
+
+        </form>
+
+        <h1>Data Entry: </h1>
+        <form method="post" name="category" class="data">
+            <input type="text" placeholder="Category">
+            <input type="submit" value="submit">
+        </form>
+        <form method="post" name="Type" class="data">
+            <input type="text" placeholder="Part Type">
+            <input type="submit" value="submit">
+        </form>
+        <form method="post" name="Part" class="data">
+            <input type="text" placeholder="Part Name">
+            <input type="submit" value="submit">
+        </form>
+    </div>
 {% endblock %}
