Set up inventory.html

--- a/website/templates/website/user.html
+++ b/website/templates/website/user.html
@@ -26,7 +26,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Inventory</a>
+              <a class="nav-link" href="{% url 'inventory' %}">Inventory</a>
             </li>
 
             <li class="nav-item">
