--- a/website/templates/website/inventory.html
+++ b/website/templates/website/inventory.html
@@ -1,1 +1,43 @@
 {% extends 'website/user.html' %}
+<main>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th class="text-start">Symbol</th>
+                <th class="text-start">Name</th>
+                <th class="text-end">Shares</th>
+                <th class="text-end">Price</th>
+                <th class="text-end">TOTAL</th>
+            </tr>
+        </thead>
+       <tbody>
+            
+                <tr>
+                    <td class="text-start">AAPL</td>
+                    <td class="text-start">Apple Inc</td>
+                    <td class="text-end">10</td>
+                    <td class="text-end">$173.56</td>
+                    <td class="text-end">$1,735.55</td>
+                </tr>
+            
+                <tr>
+                    <td class="text-start">NFLX</td>
+                    <td class="text-start">Netflix Inc.</td>
+                    <td class="text-end">5</td>
+                    <td class="text-end">$335.42</td>
+                    <td class="text-end">$1,677.10</td>
+                </tr>
+            
+        </tbody>
+        <tfoot>
+            <tr>
+                <td class="border-0 fw-bold text-end" colspan="4">Cash</td>
+                <td class="border-0 text-end">$6,621.60</td>
+            </tr>
+            <tr>
+                <td class="border-0 fw-bold text-end" colspan="4">TOTAL</td>
+                <td class="border-0 w-bold text-end">$10,034.25</td>
+            </tr>
+        </tfoot>
+    </table>
+</main>
