--- a/website/templates/website/inventory.html
+++ b/website/templates/website/inventory.html
@@ -19,14 +19,14 @@
                     <td class="text-start">{{ row.name }}</td>
                     <td class="text-end">{{ row.quantity }}</td>
                     <td class="text-end">{{ row.price }}</td>
-                    <td class="text-end">{% widthratio row.price 1 row.quantity %}</td>
+                    <td class="text-end">{{ row.total_cost }}</td>
                 </tr>
             {% endfor %}
         </tbody>
         <tfoot>
             <tr>
                 <td class="border-0 fw-bold text-end" colspan="4">TOTAL</td>
-                <td class="border-0 w-bold text-end">x</td>
+                <td class="border-0 w-bold text-end">{{ total }}</td>
             </tr>
         </tfoot>
     </table>
