--- a/website/templates/website/user.html
+++ b/website/templates/website/user.html
@@ -30,7 +30,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Logs</a>
+              <a class="nav-link" href="{% url 'logs' %}">Logs</a>
             </li>
 
             <li>
