--- a/website/templates/website/signin.html
+++ b/website/templates/website/signin.html
@@ -1,7 +1,7 @@
 {% extends 'website/nouser.html' %}
 {% block title %}Sign In{% endblock %}
 {% block body %}
-
+<main class="nouser">
     <div class="form-container">
         <h1>Sign In</h1>
         <form action="{% url 'signin' %}" method="post">
@@ -9,10 +9,11 @@
             {% if message %}
                 <h6>{{ message }}</h6>
             {% endif %}
-            <input type="text" placeholder="  Username" name="username" autofocus autocomplete="off">
-            <input type="password" placeholder="  Password" name="password" autofocus autocomplete="off">
+            <input type="text" placeholder="Username" name="username" autofocus autocomplete="off">
+            <input type="password" placeholder="Password" name="password" autocomplete="off">
             <button type="submit">Submit</button>
         </form>
         <h3><a href="{% url 'home' %}">Go back</a></h3> 
     </div>
+</main>
 {% endblock %}
