--- a/website/templates/website/user.html
+++ b/website/templates/website/user.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="{% static 'website/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'website/user.css' %}" rel="stylesheet">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
           <ul class="navbar-nav">
             
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Checkout</a>
+              <a class="nav-link" href="{% url 'checkout' %}">Checkout</a>
             </li>
 
             <li class="nav-item">
@@ -42,10 +42,8 @@
       </nav>
     </header>
     
-    <div class="user">
-      {% block body %}
-      {% endblock %}
-    </div>
+    {% block body %}
+    {% endblock %}
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
